2012-10-26  Kai Tietz  <ktietz@redhat.com>

	* string.h (strechr): Replace assembler by
	C code.
	(ascii_strcasematch): Likewise.
	(ascii_strncasematch): Likwise.

2012-10-26  Corinna Vinschen  <corinna@vinschen.de>

	* dir.cc (closedir): Fix syscall_printf.

2012-10-26  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/signal.h (sigset_t): Define here.

2012-10-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* Makefile.in (DLL_IMPORTS): Use system import libraries for
	kernel32 and ntdll instead of from in-tree w32api.
	(cygwin0.dll): Remove rule dependency on DLL_IMPORTS, as they
	are no longer built in-tree.

2012-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* thread.h (List_insert): Cast first parameter in
	InterlockedCompareExchangePointer call to avoid compiler warnings.
	(List_remove): Ditto.

2012-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* winbase.h: Remove.

2012-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.

2012-10-21  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 18.

2012-10-16  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::lseek): Remove lloffset.
	Use offset directly.  Add shortcut for lseek(fd, 0, SEEK_CUR) case.
	(fhandler_dev_floppy::ioctl): Drop wrong RDSETBLK case.
	* fhandler_raw.cc (fhandler_dev_raw::ioctl): Revamp RDSETBLK code.

2012-10-15  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler_tty.cc (fhandler_pty_slave::write): Fix potential exit from
	loop with write mutex held.  Delete redundant mutex release.  Clear tty
	error once we've grabbed it.

2012-10-15  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_raw.cc (fhandler_dev_raw::fhandler_dev_raw): Drop gratuitous
	initializing from previous patch.

2012-10-15  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::open): Fix comment.
